--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PetaPotensiCilacap</string>
+    <string name="app_name">Si Apic</string>
     <string name="title_activity_visualisasi_potensi">VisualisasiPotensi</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
